<resources>
    <string name="app_name">MOBI1_HandIn_4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="location_services">This app requires location services in order to display the nearby pictures (Preferably on High Accuracy) </string>
    <string name="turn_on_location_services">Turn on now</string>
    <string name="google_play_disconnected">Google Play Service disconnected</string>
    <string name="connection_google_lost">Connection to Google Play Services was lost, please try again</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="logo_slogan">Take photos with ease!</string>
    <string name="logo_title">ALUP</string>
    <string name="take_photo">Take Photo</string>
    <string name="camera">Camera</string>
    <string name="save">Save</string>
    <string name="insert_text_here">Insert text here...</string>


</resources>
