<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SplashedBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.emanuelmunteanu.mobi1_handin_4.PictureActivity">


    <RelativeLayout
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/LogoTitle"
            android:text="@string/logo_title" />

        <TextView
            style="@style/LogoSubtitle"
            android:layout_alignParentBottom="true"
            android:text="@string/logo_slogan" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/cameraPic"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="60dp" />

    <TextView
        android:id="@+id/markerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:shadowColor="#000000"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:shadowRadius="2.3"
        android:textColor="@android:color/white"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/textArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="6"

            android:hint="@string/insert_text_here"

            android:padding="10dp"
            android:shadowColor="#000000"
            android:shadowDx="2.0"
            android:shadowDy="2.0"

            android:shadowRadius="2.3"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"

            android:textSize="22sp" />

        <Button
            android:id="@+id/saveButton"
            style="@style/BlackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/save" />

    </LinearLayout>


</RelativeLayout>
